# rowflow

./: .gitignore  AGENTS.md  LICENSE  Makefile  README.md  pyproject.toml
config/: project.yml  report.yml  schemas.yml  source_contracts.yml  variables.yml
docs/: claim_boundaries.md  design.md  source_notes.md
src/rowflow/: __init__.py  __main__.py  cli.py  config.py  contracts.py  io.py  manifests.py  panels.py  periods.py  reports.py  validation.py
tests/: conftest.py  test_cli.py  test_config.py  test_contracts.py  test_panels.py
tests/fixtures/diagnostics/: monthly_diagnostics.csv
tests/fixtures/sibling_root/buycurve/data/clean/: monthly_issuance_maturity_panel.csv
tests/fixtures/sibling_root/liqsub/data/clean/: monthly_liquidity_substitution_panel.csv
tests/fixtures/sibling_root/tdcest/data/processed/: tdc_components.csv  tdc_estimates.csv
tests/fixtures/tdcest/: tdc_quarterly_context.csv
tests/fixtures/tic/: slt_table3_minimal.txt  tic_official_private_monthly.csv  tressect_minimal.txt
tests/fixtures/z1/: BOGZ1FL263061130Q.observations.json  BOGZ1FL263061145Q.observations.json  z1_row_official_private_fred_transactions.csv  z1_row_official_private_quarterly.csv
