[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rowflow"
version = "0.1.0"
description = "Descriptive official/private rest-of-world Treasury absorption infrastructure for the TDC project family."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "rowflow contributors"}]
dependencies = [
  "pandas>=2.0",
  "PyYAML>=6.0",
  "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.5",
]

[project.scripts]
rowflow = "rowflow.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
rowflow = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q -p no:cacheprovider"

[tool.ruff]
line-length = 100
target-version = "py311"
cache-dir = "/tmp/rowflow-ruff-cache"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]
ignore = ["E501"]
